--- a/tributepage.html
+++ b/tributepage.html
@@ -118,7 +118,7 @@
               <ul>
                 <li>
                   <p class="about">Cristiano Ronaldo was born on 5 February 1985 in Madeira, Portugal, to Jose Dinis Aveiro and his wife Maria Dolores dos Santos Aveiro. His father was a gardener with the municipality while his mother worked as a cook. Ronaldo was the
-                    youngest child among four children; others being a son and two daughters.</p</li>
+                    youngest child among four children; others being a son and two daughters.</p>
 
                     <li>
                       <p class="about">Ronaldo was expelled from the school after assaulted his teacher by throwing a chair at him. He had always been a keen footballer and by the time he was 14 years old he decided to concentrate on becoming a professional footballer.
