--- a/tributepage.html
+++ b/tributepage.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">        <!-- Code to make website responsive -->
     <title>My New Pen!</title>
       <link rel="stylesheet" href="styles/index.processed.css">
       <style>
